--- a/app/src/main/res/layout/item_table.xml
+++ b/app/src/main/res/layout/item_table.xml
@@ -5,16 +5,18 @@
     android:background="#FFFFFF">
 
     <ImageView
+        android:id="@+id/tableIcon"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:paddingLeft="5dp"
         android:src="@drawable/restaurant"/>
     <TextView
         android:id="@+id/table"
+        android:gravity="left|center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="22dp"
+        android:layout_height="match_parent"
+        android:paddingTop="0dp"
         android:paddingLeft="5dp"
-        android:text="Text"
+        android:paddingRight="5dp"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 </LinearLayout>
